@@ -27,6 +27,7 @@ ifdef::aws[]
 單一節點::
 +
 --
+* 9.14.1 RC1
 * 9.14.0 GA
 * 9.13.1 正式
 * 9.12.1 GA
@@ -44,6 +45,7 @@ ifdef::aws[]
 HA配對::
 +
 --
+* 9.14.1 RC1
 * 9.14.0 GA
 * 9.13.1 正式
 * 9.12.1 GA
@@ -71,6 +73,7 @@ ifdef::azure[]
 單一節點::
 +
 --
+* 9.14.1 RC1
 * 9.14.0 GA
 * 9.13.1 正式
 * 9.12.1 GA
@@ -88,6 +91,7 @@ ifdef::azure[]
 HA配對::
 +
 --
+* 9.14.1 RC1
 * 9.14.0 GA
 * 9.13.1 正式
 * 9.12.1 GA
@@ -114,6 +118,7 @@ ifdef::gcp[]
 單一節點::
 +
 --
+* 9.14.1 RC1
 * 9.14.0 GA
 * 9.13.1 正式
 * 9.12.1 GA
@@ -130,6 +135,7 @@ ifdef::gcp[]
 HA配對::
 +
 --
+* 9.14.1 RC1
 * 9.14.0 GA
 * 9.13.1 正式
 * 9.12.1 GA
