@@ -49,7 +49,13 @@ BlueXP提供兩種升級Cloud Volumes ONTAP 途徑：
 | 目前版本 | 您可以直接升級至的版本 
 
 
-| 9.13.1.12.9.12.9. | 9.14.0% 
+| 9.14.0% | 9.14.1. 
+
+
+.2+| 9.13.1.12.9.12.9. | 9.14.1. 
+
+
+| 9.14.0% 
 
 
 | 9.13.0 | 9.13.1.12.9.12.9. 
